accessibility fixes - increase link visibility

--- a/src/assets/scss/global/colors.scss
+++ b/src/assets/scss/global/colors.scss
@@ -2,6 +2,6 @@ $black: #000000;
 $white: #ffffff;
 $alabaster: #f9f9f9;
 $mine-shaft: #323232;
-$azure-radiance: #1181ff;
 $indigo: #4a6bce;
-$pomegranate: #f52a3a;
+$blue-ribbon: #0071f0;
+$red-ribbon: #eb0a1b;
