--- a/src/assets/scss/global/variables.scss
+++ b/src/assets/scss/global/variables.scss
@@ -7,15 +7,15 @@ $base-background-color: $mine-shaft;
 $base-color: $white;
 $content-background-color: $alabaster;
 $content-color: $mine-shaft;
-$link-color: $azure-radiance;
+$link-color: $blue-ribbon;
 $hover-link-color: $indigo;
-$active-link-color: $pomegranate;
+$active-link-color: $red-ribbon;
 
 // Fonts
 $base-font-family: Helvetica, Arial, sans-serif;
 
 // Forms
-$button-background-color: $azure-radiance;
+$button-background-color: $blue-ribbon;
 $button-hover-background-color: $indigo;
 $button-color: $white;
 
